// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LockStore add pending redirection change state correctly 1`] = `
Object {
  "checkPinStatus": "CHECK_PIN_IDLE",
  "isAppLocked": true,
  "pendingRedirection": "home",
}
`;

exports[`LockStore clear pending redirect if clear action is raised 1`] = `
Object {
  "checkPinStatus": "CHECK_PIN_IDLE",
  "isAppLocked": true,
  "pendingRedirection": null,
}
`;
